--- a/csm146/l4.tex
+++ b/csm146/l4.tex
@@ -243,5 +243,5 @@ We can see that both the precision and the recall are much lower than the accura
 
 We can define a new metric, the F1 score, which is just the harmonic mean of the precision and recall.
 $$
-\frac{1}{F_1} = (\frac{1}{P} + \frac{1}{R}) \ 2
+\frac{1}{F_1} = (\frac{1}{P} + \frac{1}{R}) / 2 = \frac{2TP}{2TP + FP + FN}
 $$
