--- a/csm146/l5.tex
+++ b/csm146/l5.tex
@@ -98,4 +98,5 @@ How do we compute $\nabla J(\theta)$? We need to use an algorithm called back pr
 \subsection*{Back Propogation}
 Backpropogation utilizes the chain rule to compute a gradient.
 
-TODO: wtf was he talking about bro
+TODO: wtf was he talking about bro https://medium.com/@karpathy/yes-you-should-understand-backprop-
+e2f06eab496b
