--- a/csm146/csm146.tex
+++ b/csm146/csm146.tex
@@ -16,7 +16,7 @@
 
 \newenvironment{definition}{
         \vspace{0.5cm}
-        \kw{Defintion}
+        \kw{Definition}
 }
 {
         \vspace{0.5cm}
@@ -33,5 +33,7 @@
 \input{l3.tex}
 \input{l4.tex}
 \input{l5.tex}
+\input{l6.tex}
+\input{l7.tex}
 
 \end{document}
